add command line features